--- a/arch/arm/configs/recovery-exynos5260_defconfig
+++ b/arch/arm/configs/recovery-exynos5260_defconfig
@@ -974,52 +974,52 @@ CONFIG_NETFILTER_XT_MATCH_U32=y
 #
 # IP: Netfilter Configuration
 #
-CONFIG_NF_DEFRAG_IPV4=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_PROC_COMPAT=y
+CONFIG_NF_DEFRAG_IPV4=n
+CONFIG_NF_CONNTRACK_IPV4=n
+CONFIG_NF_CONNTRACK_PROC_COMPAT=n
 # CONFIG_IP_NF_QUEUE is not set
-CONFIG_IP_NF_IPTABLES=y
-CONFIG_IP_NF_MATCH_AH=y
-CONFIG_IP_NF_MATCH_ECN=y
+CONFIG_IP_NF_IPTABLES=n
+CONFIG_IP_NF_MATCH_AH=n
+CONFIG_IP_NF_MATCH_ECN=n
 # CONFIG_IP_NF_MATCH_RPFILTER is not set
-CONFIG_IP_NF_MATCH_TTL=y
-CONFIG_IP_NF_FILTER=y
-CONFIG_IP_NF_TARGET_REJECT=y
-CONFIG_IP_NF_TARGET_REJECT_SKERR=y
+CONFIG_IP_NF_MATCH_TTL=n
+CONFIG_IP_NF_FILTER=n
+CONFIG_IP_NF_TARGET_REJECT=n
+CONFIG_IP_NF_TARGET_REJECT_SKERR=n
 # CONFIG_IP_NF_TARGET_ULOG is not set
-CONFIG_NF_NAT=y
-CONFIG_NF_NAT_NEEDED=y
-CONFIG_IP_NF_TARGET_MASQUERADE=y
-CONFIG_IP_NF_TARGET_NETMAP=y
-CONFIG_IP_NF_TARGET_REDIRECT=y
-CONFIG_NF_NAT_PROTO_DCCP=y
-CONFIG_NF_NAT_PROTO_GRE=y
-CONFIG_NF_NAT_PROTO_UDPLITE=y
-CONFIG_NF_NAT_PROTO_SCTP=y
-CONFIG_NF_NAT_FTP=y
-CONFIG_NF_NAT_IRC=y
-CONFIG_NF_NAT_TFTP=y
-CONFIG_NF_NAT_AMANDA=y
-CONFIG_NF_NAT_PPTP=y
-CONFIG_NF_NAT_H323=y
+CONFIG_NF_NAT=n
+CONFIG_NF_NAT_NEEDED=n
+CONFIG_IP_NF_TARGET_MASQUERADE=n
+CONFIG_IP_NF_TARGET_NETMAP=n
+CONFIG_IP_NF_TARGET_REDIRECT=n
+CONFIG_NF_NAT_PROTO_DCCP=n
+CONFIG_NF_NAT_PROTO_GRE=n
+CONFIG_NF_NAT_PROTO_UDPLITE=n
+CONFIG_NF_NAT_PROTO_SCTP=n
+CONFIG_NF_NAT_FTP=n
+CONFIG_NF_NAT_IRC=n
+CONFIG_NF_NAT_TFTP=n
+CONFIG_NF_NAT_AMANDA=n
+CONFIG_NF_NAT_PPTP=n
+CONFIG_NF_NAT_H323=n
 # CONFIG_NF_NAT_SIP is not set
-CONFIG_IP_NF_MANGLE=y
+CONFIG_IP_NF_MANGLE=n
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
 # CONFIG_IP_NF_TARGET_TTL is not set
-CONFIG_IP_NF_RAW=y
-CONFIG_IP_NF_SECURITY=y
-CONFIG_IP_NF_ARPTABLES=y
-CONFIG_IP_NF_ARPFILTER=y
-CONFIG_IP_NF_ARP_MANGLE=y
+CONFIG_IP_NF_RAW=n
+CONFIG_IP_NF_SECURITY=n
+CONFIG_IP_NF_ARPTABLES=n
+CONFIG_IP_NF_ARPFILTER=n
+CONFIG_IP_NF_ARP_MANGLE=n
 
 #
 # IPv6: Netfilter Configuration
 #
-CONFIG_NF_DEFRAG_IPV6=y
-CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_DEFRAG_IPV6=n
+CONFIG_NF_CONNTRACK_IPV6=n
 # CONFIG_IP6_NF_QUEUE is not set
-CONFIG_IP6_NF_IPTABLES=y
+CONFIG_IP6_NF_IPTABLES=n
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
 # CONFIG_IP6_NF_MATCH_FRAG is not set
@@ -1030,11 +1030,11 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_RPFILTER is not set
 # CONFIG_IP6_NF_MATCH_RT is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
-CONFIG_IP6_NF_FILTER=y
-CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
-CONFIG_IP6_NF_MANGLE=y
-CONFIG_IP6_NF_RAW=y
+CONFIG_IP6_NF_FILTER=n
+CONFIG_IP6_NF_TARGET_REJECT=n
+CONFIG_IP6_NF_TARGET_REJECT_SKERR=n
+CONFIG_IP6_NF_MANGLE=n
+CONFIG_IP6_NF_RAW=n
 # CONFIG_IP6_NF_SECURITY is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
@@ -1053,9 +1053,9 @@ CONFIG_IP6_NF_RAW=y
 # CONFIG_LAPB is not set
 # CONFIG_ECONET is not set
 # CONFIG_WAN_ROUTER is not set
-CONFIG_PHONET=y
+CONFIG_PHONET=n
 # CONFIG_IEEE802154 is not set
-CONFIG_NET_SCHED=y
+CONFIG_NET_SCHED=n
 
 #
 # Queueing/Scheduling
@@ -1135,18 +1135,18 @@ CONFIG_HAVE_BPF_JIT=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
-CONFIG_BT=y
+CONFIG_BT=n
 # CONFIG_BT_RFCOMM is not set
 # CONFIG_BT_BNEP is not set
-CONFIG_BT_HIDP=y
+CONFIG_BT_HIDP=n
 
 #
 # Bluetooth device drivers
 #
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-CONFIG_BT_HCIUART=y
-CONFIG_BT_HCIUART_H4=y
+CONFIG_BT_HCIUART=n
+CONFIG_BT_HCIUART_H4=n
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_ATH3K is not set
 # CONFIG_BT_HCIUART_LL is not set
@@ -1156,26 +1156,26 @@ CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_AF_RXRPC is not set
-CONFIG_FIB_RULES=y
-CONFIG_WIRELESS=y
-CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
-CONFIG_CFG80211=y
+CONFIG_FIB_RULES=n
+CONFIG_WIRELESS=n
+CONFIG_WEXT_CORE=n
+CONFIG_WEXT_PROC=n
+CONFIG_CFG80211=n
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
-CONFIG_CFG80211_DEFAULT_PS=y
+CONFIG_CFG80211_DEFAULT_PS=n
 # CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
-CONFIG_CFG80211_WEXT=y
-CONFIG_WIRELESS_EXT_SYSFS=y
+CONFIG_CFG80211_WEXT=n
+CONFIG_WIRELESS_EXT_SYSFS=n
 # CONFIG_LIB80211 is not set
-CONFIG_CFG80211_ALLOW_RECONNECT=y
+CONFIG_CFG80211_ALLOW_RECONNECT=n
 # CONFIG_CFG80211_REG_NOT_UPDATED is not set
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
-CONFIG_RFKILL=y
-CONFIG_RFKILL_PM=y
+CONFIG_RFKILL=n
+CONFIG_RFKILL_PM=n
 # CONFIG_RFKILL_INPUT is not set
 # CONFIG_RFKILL_REGULATOR is not set
 # CONFIG_RFKILL_GPIO is not set
@@ -1183,14 +1183,14 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
-CONFIG_NFC_DEVICES=y
+CONFIG_NFC_DEVICES=n
 # CONFIG_PN544_NFC is not set
 # CONFIG_NFC_PN533 is not set
 # CONFIG_PN547_NFC is not set
-CONFIG_SEC_NFC=y
-CONFIG_SEC_NFC_S3FNRN3=y
+CONFIG_SEC_NFC=n
+CONFIG_SEC_NFC_S3FNRN3=n
 # CONFIG_SEC_NFC_UART is not set
-CONFIG_SEC_NFC_I2C=y
+CONFIG_SEC_NFC_I2C=n
 # CONFIG_SEC_NFC_I2C_GPIO is not set
 
 #
@@ -1264,7 +1264,7 @@ CONFIG_BLK_DEV_RAM_SIZE=30720
 # CONFIG_BMP085 is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
 CONFIG_SAMSUNG_MUIC=y
-CONFIG_MUIC_MAX77803_SUPPORT_OTG_AUDIO_DOCK=y
+CONFIG_MUIC_MAX77803_SUPPORT_OTG_AUDIO_DOCK=n
 # CONFIG_MUIC_MAX77803_SUPPORT_SMART_DOCK is not set
 # CONFIG_MUIC_MAX77803_SUPPORT_CAR_DOCK is not set
 # CONFIG_MUIC_MAX77803_SUPPORT_MHL_CABLE_DETECTION is not set
@@ -1402,38 +1402,38 @@ CONFIG_TUN=y
 #
 # CAIF transport drivers
 #
-CONFIG_ETHERNET=y
-CONFIG_NET_VENDOR_BROADCOM=y
+CONFIG_ETHERNET=n
+CONFIG_NET_VENDOR_BROADCOM=n
 # CONFIG_B44 is not set
 # CONFIG_NET_CALXEDA_XGMAC is not set
-CONFIG_NET_VENDOR_CHELSIO=y
-CONFIG_NET_VENDOR_CIRRUS=y
+CONFIG_NET_VENDOR_CHELSIO=n
+CONFIG_NET_VENDOR_CIRRUS=n
 # CONFIG_CS89x0 is not set
 # CONFIG_DM9000 is not set
 # CONFIG_DNET is not set
-CONFIG_NET_VENDOR_FARADAY=y
+CONFIG_NET_VENDOR_FARADAY=n
 # CONFIG_FTMAC100 is not set
 # CONFIG_FTGMAC100 is not set
-CONFIG_NET_VENDOR_INTEL=y
-CONFIG_NET_VENDOR_I825XX=y
-CONFIG_NET_VENDOR_MARVELL=y
-CONFIG_NET_VENDOR_MICREL=y
+CONFIG_NET_VENDOR_INTEL=n
+CONFIG_NET_VENDOR_I825XX=n
+CONFIG_NET_VENDOR_MARVELL=n
+CONFIG_NET_VENDOR_MICREL=n
 # CONFIG_KS8842 is not set
 # CONFIG_KS8851 is not set
 # CONFIG_KS8851_MLL is not set
-CONFIG_NET_VENDOR_MICROCHIP=y
+CONFIG_NET_VENDOR_MICROCHIP=n
 # CONFIG_ENC28J60 is not set
-CONFIG_NET_VENDOR_NATSEMI=y
-CONFIG_NET_VENDOR_8390=y
+CONFIG_NET_VENDOR_NATSEMI=n
+CONFIG_NET_VENDOR_8390=n
 # CONFIG_AX88796 is not set
 # CONFIG_ETHOC is not set
-CONFIG_NET_VENDOR_SEEQ=y
+CONFIG_NET_VENDOR_SEEQ=n
 # CONFIG_SEEQ8005 is not set
-CONFIG_NET_VENDOR_SMSC=y
+CONFIG_NET_VENDOR_SMSC=n
 # CONFIG_SMC91X is not set
 # CONFIG_SMC911X is not set
 # CONFIG_SMSC911X is not set
-CONFIG_NET_VENDOR_STMICRO=y
+CONFIG_NET_VENDOR_STMICRO=n
 # CONFIG_STMMAC_ETH is not set
 # CONFIG_PHYLIB is not set
 # CONFIG_MICREL_KS8995MA is not set
@@ -1465,25 +1465,17 @@ CONFIG_SLIP_MODE_SLIP6=y
 # CONFIG_USB_HSO is not set
 # CONFIG_USB_CDC_PHONET is not set
 # CONFIG_USB_IPHETH is not set
-CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
-CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCM4330 is not set
 # CONFIG_BCM4343 is not set
 # CONFIG_BCM4334 is not set
 # CONFIG_BCM4335 is not set
-CONFIG_BCM4339=y
 # CONFIG_BCM4354 is not set
 # CONFIG_BCM43241 is not set
-CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
-CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-CONFIG_WIFI_BROADCOM_COB=y
-CONFIG_WLAN_REGION_CODE=100
+CONFIG_BROADCOM_WIFI_RESERVED_MEM=n
 # CONFIG_WIFI_2GHZ_VHT_NO_SUPPORT is not set
-CONFIG_WLAIBSS=y
 # CONFIG_BRCM_CCX is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
@@ -2019,15 +2011,15 @@ CONFIG_VIDEO_MEDIA=y
 CONFIG_RC_CORE=y
 CONFIG_LIRC=y
 CONFIG_RC_MAP=y
-CONFIG_IR_NEC_DECODER=y
-CONFIG_IR_RC5_DECODER=y
-CONFIG_IR_RC6_DECODER=y
-CONFIG_IR_JVC_DECODER=y
-CONFIG_IR_SONY_DECODER=y
-CONFIG_IR_RC5_SZ_DECODER=y
-CONFIG_IR_SANYO_DECODER=y
-CONFIG_IR_MCE_KBD_DECODER=y
-CONFIG_IR_LIRC_CODEC=y
+CONFIG_IR_NEC_DECODER=n
+CONFIG_IR_RC5_DECODER=n
+CONFIG_IR_RC6_DECODER=n
+CONFIG_IR_JVC_DECODER=n
+CONFIG_IR_SONY_DECODER=n
+CONFIG_IR_RC5_SZ_DECODER=n
+CONFIG_IR_SANYO_DECODER=n
+CONFIG_IR_MCE_KBD_DECODER=n
+CONFIG_IR_LIRC_CODEC=n
 # CONFIG_RC_ATI_REMOTE is not set
 # CONFIG_IR_IMON is not set
 # CONFIG_IR_MCEUSB is not set
@@ -2042,28 +2034,28 @@ CONFIG_MEDIA_TUNER_CUSTOMISE=y
 #
 # Customize TV tuners
 #
-CONFIG_MEDIA_TUNER_SIMPLE=m
-CONFIG_MEDIA_TUNER_TDA8290=m
-CONFIG_MEDIA_TUNER_TDA827X=m
-CONFIG_MEDIA_TUNER_TDA18271=m
-CONFIG_MEDIA_TUNER_TDA9887=m
-CONFIG_MEDIA_TUNER_TEA5761=m
-CONFIG_MEDIA_TUNER_TEA5767=m
-CONFIG_MEDIA_TUNER_MT20XX=m
-CONFIG_MEDIA_TUNER_MT2060=m
-CONFIG_MEDIA_TUNER_MT2063=m
-CONFIG_MEDIA_TUNER_MT2266=m
-CONFIG_MEDIA_TUNER_MT2131=m
-CONFIG_MEDIA_TUNER_QT1010=m
-CONFIG_MEDIA_TUNER_XC2028=m
-CONFIG_MEDIA_TUNER_XC5000=m
-CONFIG_MEDIA_TUNER_XC4000=m
-CONFIG_MEDIA_TUNER_MXL5005S=m
-CONFIG_MEDIA_TUNER_MXL5007T=m
-CONFIG_MEDIA_TUNER_MC44S803=m
-CONFIG_MEDIA_TUNER_MAX2165=m
-CONFIG_MEDIA_TUNER_TDA18218=m
-CONFIG_MEDIA_TUNER_TDA18212=m
+CONFIG_MEDIA_TUNER_SIMPLE=n
+CONFIG_MEDIA_TUNER_TDA8290=n
+CONFIG_MEDIA_TUNER_TDA827X=n
+CONFIG_MEDIA_TUNER_TDA18271=n
+CONFIG_MEDIA_TUNER_TDA9887=n
+CONFIG_MEDIA_TUNER_TEA5761=n
+CONFIG_MEDIA_TUNER_TEA5767=n
+CONFIG_MEDIA_TUNER_MT20XX=n
+CONFIG_MEDIA_TUNER_MT2060=n
+CONFIG_MEDIA_TUNER_MT2063=n
+CONFIG_MEDIA_TUNER_MT2266=n
+CONFIG_MEDIA_TUNER_MT2131=n
+CONFIG_MEDIA_TUNER_QT1010=n
+CONFIG_MEDIA_TUNER_XC2028=n
+CONFIG_MEDIA_TUNER_XC5000=n
+CONFIG_MEDIA_TUNER_XC4000=n
+CONFIG_MEDIA_TUNER_MXL5005S=n
+CONFIG_MEDIA_TUNER_MXL5007T=n
+CONFIG_MEDIA_TUNER_MC44S803=n
+CONFIG_MEDIA_TUNER_MAX2165=n
+CONFIG_MEDIA_TUNER_TDA18218=n
+CONFIG_MEDIA_TUNER_TDA18212=n
 CONFIG_VIDEO_V4L2=y
 CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_VIDEOBUF2_CORE=y
@@ -2075,7 +2067,7 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 # CONFIG_VIDEO_HELPER_CHIPS_AUTO is not set
-CONFIG_VIDEO_IR_I2C=y
+CONFIG_VIDEO_IR_I2C=n
 
 #
 # Encoders, decoders, sensors and other helper chips
